--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -109,9 +109,9 @@
             </div>
           </div>
         </div>
-        <button class="center">
+        <p class="center">
           <a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy button">My Resume<span class="glyphicon glyphicon-new-window"></span></a>
-        </button>
+        </p>
       </section>
     </div>
     <footer>
