--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -70,9 +70,9 @@
           </div>
           <p class="center">
             <span id="error"></span><br>
-            <button class="center">
+            <p class="center">
               <a class="button" id="messageButton" href="javascript:sendMessage();">Send Message</a>
-            </button>
+            </p>
           </p>
         </form>
       </section>
