--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -51,7 +51,7 @@
         <div class="container">
           <figure class="grid-thirds">
             <a href="/projects/ParknGo">
-              <img class="bgImg" style="background-image:url('Project/PnGPreview.jpg')">
+              <div class="bgImg" style="background-image:url('Project/PnGPreview.jpg')"></div>
               <figcaption class="ease">
                 <h2>Park & Go</h2>
               </figcaption>
@@ -59,15 +59,15 @@
           </figure>
           <figure class="grid-thirds">
             <a href="/projects/IconDesign">
-              <img class="bgImg" style="background-image:url('Project/IconDesign/ActivityViz-basic.jpg')">
+              <div class="bgImg" style="background-image:url('Project/IconDesign/ActivityViz-basic.jpg')"></div>
               <figcaption class="ease">
                 <h2>Icons & Logos</h2>
               </figcaption>
             </a>
           </figure>
           <figure class="grid-thirds">
-            <a href="/projects/ParknGo">
-              <img class="bgImg" style="background-image:url('Project/DancingPreview.jpg')">
+            <a href="/projects/DancingTails">
+              <div class="bgImg" style="background-image:url('Project/DancingPreview.jpg')"></div>
               <figcaption class="ease">
                 <h2>Dancing Tails</h2>
               </figcaption>
@@ -75,7 +75,7 @@
           </figure>
           <figure class="grid-thirds">
             <a href="/projects/ActivityViz">
-              <img class="bgImg" style="background-image:url('Project/ActivityViz/Cover.jpg')">
+              <div class="bgImg" style="background-image:url('Project/ActivityViz/Cover.jpg')"></div>
               <figcaption class="ease">
                 <h2>Activity Viz</h2>
               </figcaption>
@@ -83,7 +83,7 @@
           </figure>
           <figure class="grid-thirds">
             <a href="/projects/SocialFitness">
-              <img class="bgImg" style="background-image:url('Project/SocialFitness/AffinityDiagram2.jpg')">
+              <div class="bgImg" style="background-image:url('Project/SocialFitness/AffinityDiagram2.jpg')"></div>
               <figcaption class="ease">
                 <h2>Affinity Wall</h2>
               </figcaption>
@@ -91,16 +91,16 @@
           </figure>
           <figure class="grid-thirds">
             <a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">
-              <img class="bgImg" style="background-image:url('Project/ResumeDesign/Resume2014.jpg')">
+              <div class="bgImg" style="background-image:url('Project/ResumeDesign/Resume2014.jpg')"></div>
               <figcaption class="ease">
                 <h2>Resume</h2>
               </figcaption>
             </a>
           </figure>
         </div>
-        <button class="center">
+        <p class="center">
           <a class="button" href="/projects">My Projects</a>
-        </button>
+        </p>
       </section>
       <section class="aboutMe">
             <figure>
@@ -109,12 +109,14 @@
             <p class="large">
               Hi! I'm Zhen (/zen/) and I'm a Graphic/UI/UX designer in San Francisco. I love pushing pixels, designing products, improving my coding abilities and crafting everything from scratch. See my work on my <a href="/projects">portfolio</a>. 
             </p>
-        <button class="center"><a class="button" href="/about">About Me</a></button>
+        <p class="center"><a class="button" href="/about">About Me</a></p>
       </section>
     </div>
 
     <section class="splash" id="mutt">
-      <p class="center"><a class="no-ajaxy button" href="https://instagram.com/zhenito/" target="_blank">Instagram</a></p>
+      <p class="center">
+        <a class="no-ajaxy button" href="https://instagram.com/zhenito/" target="_blank">Instagram</a>
+      </p>
     </section>
     <footer>
       <div>
