--- a/views/DancingTails.handlebars
+++ b/views/DancingTails.handlebars
@@ -37,9 +37,9 @@
           Dancing Tails Dog Training is a local business that is located in the East Bay Area.
         </p>
         <div class="center">
-          <strong>
-            MAIN TOOLS
-          </strong>
+          <p>
+            <strong>MAIN TOOLS</strong>
+          </p>
           <p>
             MongoDB | Express.js | Angular.js | Node.js | JQuery | Jade | HTML | Github | Heroku | YouTube api
           </p>
