--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <header class="hideHeader">
+  <nav class="hideNav">
     <ul>
       <li><a href="/home">Home</a></li>
       <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
@@ -28,10 +28,10 @@
       <li><a href="/about">About</a></li>
       <li><a href="/contact">Contact</a></li>
     </ul>
-  </header>
+  </nav>
   <div id="main" class="about" tabindex="-1">
     <div class="splash" id="splashContact">
-      <section class="splashTitle">
+      <section class="splashTitle ease">
         <h1>Hello!</h1>
       </section>
       <div class="nextSection">
@@ -43,10 +43,10 @@
     <div class="container">
       <section class="contactMe">
         <h1>Contact Me</h1>
-        <p class="centerText">
+        <p class="centerText bottom hideBottom">
           I am currently working with a few local businesses and non-profitable organizations as a web application designer/developer, but I am seeking a full time role as a Graphic/UI/UX designer/developer. Please drop a line and say hi :)
         </p>
-        <form class="container">
+        <form class="container bottom hideBottom">
           <div class="center">
             <div class="grid-half">
               <div id="messageName">
