--- a/views/projects.handlebars
+++ b/views/projects.handlebars
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <header class="hideHeader">
+  <nav class="hideNav">
     <ul>
       <li><a href="/home">Home</a></li>
       <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
@@ -29,33 +29,33 @@
       <li><a href="/about">About</a></li>
       <li><a href="/contact">Contact</a></li>
     </ul>
-  </header>
+  </nav>
   <div id="main" class="projects" tabindex="-1">
     <div id="content" class="container">
       <section>
         <h1>Projects</h1>
         <div class="center">
           <div class="grid-half">
-            <a href="/projects/{{projects.9.url}}"><figure class="grid4"><div style="background-image: url('{{projects.9.preview}}')" class="bgImg"></div></figure></a>
+            <a href="/projects/{{projects.9.url}}"><figure class="grid4 bottom hideBottom"><div style="background-image: url('{{projects.9.preview}}')" class="bgImg"></div></figure></a>
           </div>
           <div class="grid-half">
-            <a href="/projects/{{projects.8.url}}"><figure class="grid4"><div style="background-image: url('{{projects.8.preview}}')" class="bgImg"></div></figure></a>
+            <a href="/projects/{{projects.8.url}}"><figure class="grid4 bottom hideBottom"><div style="background-image: url('{{projects.8.preview}}')" class="bgImg"></div></figure></a>
           </div>
         </div>
         <div class="center">
           <div class="grid-thirds">
-            <a href="/projects/{{projects.0.url}}"><figure class="grid6"><div style="background-image: url('{{projects.0.preview}}')" class="bgImg"></div></figure></a>
-            <a href="/projects/{{projects.1.url}}"><figure class="grid7"><div style="background-image: url('{{projects.1.preview}}')" class="bgImg"></div></figure></a>
+            <a href="/projects/{{projects.0.url}}"><figure class="grid6 bottom hideBottom"><div style="background-image: url('{{projects.0.preview}}')" class="bgImg"></div></figure></a>
+            <a href="/projects/{{projects.1.url}}"><figure class="grid7 bottom hideBottom"><div style="background-image: url('{{projects.1.preview}}')" class="bgImg"></div></figure></a>
           </div>
           <div class="grid-thirds">
-            <a href="/projects/{{projects.2.url}}"><figure class="grid5"><div style="background-image: url('{{projects.2.preview}}')" class="bgImg"></div></figure></a>
-            <a href="/projects/{{projects.3.url}}"><figure class="grid4"><div style="background-image: url('{{projects.3.preview}}')" class="bgImg"></div></figure></a>
-            <a href="/projects/{{projects.4.url}}"><figure class="grid4"><div style="background-image: url('{{projects.4.preview}}')" class="bgImg"></div></figure></a>
+            <a href="/projects/{{projects.2.url}}"><figure class="grid5 bottom hideBottom"><div style="background-image: url('{{projects.2.preview}}')" class="bgImg"></div></figure></a>
+            <a href="/projects/{{projects.3.url}}"><figure class="grid4 bottom hideBottom"><div style="background-image: url('{{projects.3.preview}}')" class="bgImg"></div></figure></a>
+            <a href="/projects/{{projects.4.url}}"><figure class="grid4 bottom hideBottom"><div style="background-image: url('{{projects.4.preview}}')" class="bgImg"></div></figure></a>
           </div>
           <div class="grid-thirds">
-            <a href="/projects/{{projects.7.url}}"><figure class="grid4"><div style="background-image: url('{{projects.7.preview}}')" class="bgImg"></div></figure></a>
-            <a href="/projects/{{projects.5.url}}"><figure class="grid4"><div style="background-image: url('{{projects.5.preview}}')" class="bgImg"></div></figure></a>
-            <a href="/projects/{{projects.6.url}}"><figure class="grid5"><div style="background-image: url('{{projects.6.preview}}')" class="bgImg"></div></figure></a>
+            <a href="/projects/{{projects.7.url}}"><figure class="grid4 bottom hideBottom"><div style="background-image: url('{{projects.7.preview}}')" class="bgImg"></div></figure></a>
+            <a href="/projects/{{projects.5.url}}"><figure class="grid4 bottom hideBottom"><div style="background-image: url('{{projects.5.preview}}')" class="bgImg"></div></figure></a>
+            <a href="/projects/{{projects.6.url}}"><figure class="grid5 bottom hideBottom"><div style="background-image: url('{{projects.6.preview}}')" class="bgImg"></div></figure></a>
           </div>
         </div>
       </section>
