--- a/views/OnMyBlock.handlebars
+++ b/views/OnMyBlock.handlebars
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <header class="hideHeader">
+  <nav class="hideNav">
     <ul>
       <li><a href="/home">Home</a></li>
       <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
@@ -28,7 +28,7 @@
       <li><a href="/about">About</a></li>
       <li><a href="/contact">Contact</a></li>
     </ul>
-  </header>
+  </nav>
   <div id="main" class="1" tabindex="-1">
     <div id="content" class="container">
       <section class="project">
