--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <header class="hideHeader">
+  <nav class="hideNav">
     <ul>
       <li><a href="/home">Home</a></li>
       <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
@@ -28,10 +28,10 @@
       <li><a href="/about">About</a></li>
       <li><a href="/contact">Contact</a></li>
     </ul>
-  </header>
+  </nav>
   <div id="main" class="about" tabindex="-1">
     <div class="splash" id="splashAbout">
-      <section class="splashTitle">
+      <section class="splashTitle bottom hideBottom">
         <h1>Hi, I'm Zhen</h1>
       </section>
     </div>
@@ -39,7 +39,7 @@
     <div id="content" class="container">
       <section class="aboutMe">
         <h2>About me</h2>
-        <div class="panel">
+        <div class="panel bottom hideBottom">
           <p>
             I’m Zhen (/zen/) and I currently live in San Francisco.
           </p>
@@ -48,7 +48,7 @@
           </p>
         </div>
         <div id="bio">
-          <div class="grid-thirds">
+          <div class="grid-thirds bottom hideBottom delay0">
             <div class="panel">
               <p>
                 <strong>UI/UX Designer</strong>
@@ -58,7 +58,7 @@
               </p>
             </div>
           </div>
-          <div class="grid-thirds">
+          <div class="grid-thirds bottom hideBottom delay1">
             <div class="panel">
               <p>
                 <strong>Graphic Designer</strong>
@@ -68,7 +68,7 @@
               </p>
             </div>
           </div>
-          <div class="grid-thirds">
+          <div class="grid-thirds bottom hideBottom delay2">
             <div class="panel">
               <p>
                 <strong>Web Developer</strong>
@@ -78,7 +78,7 @@
               </p>
             </div>
           </div>
-          <div class="grid-thirds">
+          <div class="grid-thirds bottom hideBottom delay3">
             <div class="panel">
               <p>
                 <strong>UC Graduate</strong>
@@ -88,7 +88,7 @@
               </p>
             </div>
           </div>
-          <div class="grid-thirds">
+          <div class="grid-thirds bottom hideBottom delay4">
             <div class="panel">
               <p>
                 <strong>Ice-Cream Lover</strong>
@@ -98,7 +98,7 @@
               </p>
             </div>
           </div>
-          <div class="grid-thirds">
+          <div class="grid-thirds bottom hideBottom delay5">
             <div class="panel">
               <p>
                 <strong>Dog-Rescuer</strong>
