--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <header class="hideHeader">
+  <nav class="hideNav">
     <ul>
       <li><a href="/home">Home</a></li>
       <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
@@ -29,9 +29,9 @@
       <li><a href="/about">About</a></li>
       <li><a href="/contact">Contact</a></li>
     </ul>
-  </header>
+  </nav>
   <div id="main" class="home active" tabindex="-1">
-    <div class="splash" id="splashHome">
+    <div class="splash hasHighRes" id="splashHome" style="background-image: url('../HomeCover2.JPG')">
       <section class="splashTitle">
         <h2 id="line1" class="delay0 ease hideBottom">Hi, I'm Zhen</h2>
         <h2 id="line2" class="delay1 ease hideBottom">and I like to code & design</h2>
@@ -49,7 +49,7 @@
         <p>Design: Photoshop, Illustrator, Axure, Lucidchart</p>
         <p>Technical: HTML/CSS, Jade, MEAN (MongoDB, ExpressJS, AngularJS, NodeJS)
         <div class="container">
-          <figure class="grid-thirds">
+          <figure class="grid-thirds right hideRight delay0">
             <a href="/projects/ParknGo">
               <div class="bgImg" style="background-image:url('Project/PnGPreview.jpg')"></div>
               <figcaption class="ease">
@@ -57,7 +57,7 @@
               </figcaption>
             </a>
           </figure>
-          <figure class="grid-thirds">
+          <figure class="grid-thirds right hideRight delay1">
             <a href="/projects/IconDesign">
               <div class="bgImg" style="background-image:url('Project/IconDesign/ActivityViz-basic.jpg')"></div>
               <figcaption class="ease">
@@ -65,7 +65,7 @@
               </figcaption>
             </a>
           </figure>
-          <figure class="grid-thirds">
+          <figure class="grid-thirds right hideRight delay2">
             <a href="/projects/DancingTails">
               <div class="bgImg" style="background-image:url('Project/DancingPreview.jpg')"></div>
               <figcaption class="ease">
@@ -73,7 +73,7 @@
               </figcaption>
             </a>
           </figure>
-          <figure class="grid-thirds">
+          <figure class="grid-thirds right hideRight delay3">
             <a href="/projects/ActivityViz">
               <div class="bgImg" style="background-image:url('Project/ActivityViz/Cover.jpg')"></div>
               <figcaption class="ease">
@@ -81,7 +81,7 @@
               </figcaption>
             </a>
           </figure>
-          <figure class="grid-thirds">
+          <figure class="grid-thirds right hideRight delay4">
             <a href="/projects/SocialFitness">
               <div class="bgImg" style="background-image:url('Project/SocialFitness/AffinityDiagram2.jpg')"></div>
               <figcaption class="ease">
@@ -89,7 +89,7 @@
               </figcaption>
             </a>
           </figure>
-          <figure class="grid-thirds">
+          <figure class="grid-thirds right hideRight delay5">
             <a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">
               <div class="bgImg" style="background-image:url('Project/ResumeDesign/Resume2014.jpg')"></div>
               <figcaption class="ease">
@@ -103,10 +103,10 @@
         </p>
       </section>
       <section class="aboutMe">
-            <figure>
+            <figure class="scale scaleHide">
               <img src="Zhen.jpg">
             </figure>
-            <p class="large">
+            <p class="large bottom hideBottom">
               Hi! I'm Zhen (/zen/) and I'm a Graphic/UI/UX designer in San Francisco. I love pushing pixels, designing products, improving my coding abilities and crafting everything from scratch. See my work on my <a href="/projects">portfolio</a>. 
             </p>
         <p class="center"><a class="button" href="/about">About Me</a></p>
@@ -157,18 +157,7 @@
   <script src="js/ajaxify.js"></script>
   <!-- <script src="https://code.jquery.com/jquery.js"></script>-->
   <script src="js/mainscript.js"></script>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-48511938-4', 'zxzdesigns.com/home');
-    ga('send', {
-        'hitType':'pageview',
-        'page':'/home'
-    });
-  </script>
+  <script src="js/home.js"></script>
 
   
 </body>
