--- a/views/instagram.handlebars
+++ b/views/instagram.handlebars
@@ -31,7 +31,7 @@
   <div id="main" class="about" tabindex="-1">
     <div id="content" class="container">
       <section class="instagram">
-        <div class="grid-half">
+        <div class="grid-full">
           <img src="{{profileImg}}">
         </div>
         <h1>{{username}}</h1>
