--- a/views/SFMuseum.handlebars
+++ b/views/SFMuseum.handlebars
@@ -21,6 +21,11 @@
 
 <body>
   <nav class="hideNav">
+    <div id="menu">
+        <span class="menuline"></span>
+        <span class="menuline"></span>
+        <span class="menuline"></span>
+    </div>
     <ul>
       <li><a href="/home">Home</a></li>
       <li><a href="/Resume/FlatResumeWeb.pdf" target="_blank" class="no-ajaxy">Resume</a></li>
